Added a weathercomposer and updated the Index and WeatherForecast

--- a/Vejrudsigten/Pages/Index.cshtml
+++ b/Vejrudsigten/Pages/Index.cshtml
@@ -6,5 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Vejrudsigten</h1>
-    <p>@ViewData["Vejrudsigten"]</p>
+    <br />
+    <h2 style="color: green; border: solid 2px green;">@ViewData["By"]</h2>
+    <h3 style="color: blue;">@ViewData["Vejrudsigten"]</h3>
 </div>
